2008-04-14  John W. Eaton  <jwe@octave.org>

	* file-io.cc (Ffread): Allow SKIP arg to be omitted.
	(Ffwrite): Likewise.  Handle args in a way consistent with Ffread.

2008-04-09  Michael Goffioul  <michael.goffioul@gmail.com>

	* DLD-FUNCTIONS/dispatch.cc: Replace system("echo '...'>...") calls
	with real file writing.

2008-04-07  Jaroslav Hajek <highegg@gmail.com>

	* DLD-FUNCTIONS/qr.cc (Fqrshift): New function.
	* DLD-FUNCTIONS/chol.cc (Fcholinsert, Fcholdelete, Fcholshift):
	New functions.

2008-04-04  John W. Eaton  <jwe@octave.org>

	* parse.y (make_constant): Handle escape sequences in dq-strings.

2008-04-03  John W. Eaton  <jwe@octave.org>

	* parse.y (make_constant): Also stash original text for strings.

	* ov-fcn-handle.cc (octave_fcn_handle::subsref):
	Don't call next_subsref here.

2008-04-01  John W. Eaton  <jwe@octave.org>

	* pt-id.h (do_lookup (bool&, bool)): Delete.
	(do_lookup (tree_argument_list *, const string_vector&,
	octave_value_list&, bool&)): Call MAYBE_DO_BREAKPOINT here.

2008-04-02  David Bateman  <dbateman@free.fr>

	* graphics.cc (void gnuplot_backend::close_figure (const
	octave_value&) const): Allow for an input and output stream.

2008-03-28  Jaroslav Hajek  <highegg@gmail.com>

	* DLD-FUNCTIONS/lookup.cc: New file.
	* Makefile.in (DLD_XSRC): Add it to the list.

2008-03-28  David Bateman  <dbateman@free.fr>

	* ov-complex.cc (SCALAR_MAPPER, CD_SCALAR_MAPPER): New macro for
	complex values with zero imaginary part.
	(erf, erfc, gamma, lgamma): Use the new mappers to define these
	mapper functions.
	* ov-complex.h (erf, erfc, gamma, lgamma): Declare them.
	* ov-cx-mat.cc (any_element_less_than, any_element_greater_than):
	New static functions
	(DARRAY_MAPPER, CD_ARRAY_MAPPER): New macro for complex values
	with zero imaginary part.
	(erf, erfc, gamma, lgamma): Use the new mappers to define these
	mapper functions.
	* ov-cx-mat.h (erf, erfc, gamma, lgamma): Declare them.